<resources>
    <string name="app_name">Food Nexus</string>
    <string name="title_all_dishes">All dishes</string>
    <string name="title_filters">Filters</string>
    <string name="title_random_dish">Random Dish</string>
    <string name="title_add_dish">Add dish</string>
    <string name="title_edit_dish">Edit dish</string>
    <string name="title_delete_dish">Delete dish</string>
    <string name="title_save_dish">Save dish</string>
    <string name="title_details_dish">Dish Details</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="ans_yes">Yes</string>
    <string name="ans_no">No</string>
    <string name="cancel">Cancel</string>

    <!--add/edit dish-->
    <string name="title">Title</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="cook_time">Cooking Time In Minutes</string>
    <string name="directions">Directions To Cook</string>
    <string name="add_dish">Add Dish</string>
    <string name="select_image_action">Select Image Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="go_to_settings_dialog">It Looks like you have turned off permissions required for this feature. It can be enabled under Application Settings</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="pick_image_error">Please select an image</string>
    <string name="no_items_available">Dishes list is empty</string>

    <!--delete dish-->
    <string name="msg_delete_dish">Are you sure you want to delete %1$s?</string>

    <!--random dish-->
    <string name="cheap_title" translatable="false">cheap</string>
    <string name="vegetarian_title" translatable="false">vegetarian</string>
    <string name="vegan_title" translatable="false">vegan</string>
    <string name="healthy_title" translatable="false">healthy</string>
    <string name="cook_time_title" translatable="false">cook time:\n %1$s</string>
    <string name="servings_title" translatable="false">servings:\n %1$s</string>
    <string name="dish_saved" translatable="false">Dish saved successfully</string>
    <string name="save_error_data_not_loaded" translatable="false">Error upon save, data is not loaded</string>
    <string name="save_error_data_not_compatible" translatable="false">Error upon save, incompatible data</string>

    <!--chips-->
    <string name="chip_favourites">favourites</string>
    <string name="chip_fast">fast</string>
    <string name="chip_easy">easy</string>
    <string name="chip_medium">medium</string>
    <string name="chip_hard">hard</string>

    <string-array name="dishTypes">
        <item>breakfast</item>
        <item>lunch</item>
        <item>snacks</item>
        <item>dinner</item>
        <item>salad</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>other</item>
    </string-array>

    <string-array name="dishDifficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="dishCookTime">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>50</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
    </string-array>

</resources>